address change fixes: steps, breadcrumbs, spacing (h1 and alert), MSCA personal details links

--- a/src/custom-3.css
+++ b/src/custom-3.css
@@ -44,6 +44,14 @@ input[type="reset"], input[type="button"], input[type="submit"]
   opacity: 0;
 }
 
+.can-ca-form input:disabled {
+  background: #dddddd;
+}
+
+.can-ca-form input:disabled+label {
+  color: #ccc;
+}
+
 .can-ca-form {
     clear: both;
     padding-top: 6px;
